# ToyLibGame

./: CMakeLists-backup.txt  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
ToyGame/: RegiterGame.cpp
ToyGame/Assets/KitGame/: Logo.x
ToyGame/Assets/KitGame/Field/: brick.x
ToyGame/Assets/KitGame/Field_snow/: snow_field.x  snow_ground.x
ToyGame/Assets/KitGame/Hero/: hero_f.gltf  hero_fのコピー.gltf  hero_m.gltf
ToyGame/Assets/RPG/: g.x  island.x
ToyGame/Assets/VKTest/: glider.x
ToyGame/KitGame/: GameApp.cpp  GameApp.h  MyGameApp.cpp  MyGameApp.h  StageScene.cpp  StageScene.h  TitleScene.cpp  TitleScene.h
ToyGame/KitGame/Actors/: EnemyActor.cpp  EnemyActor.h  PlayerActor.cpp  PlayerActor.h  RPGCharacter.cpp  RPGCharacter.h
ToyGame/KitGame/FieldScene/: FieldScene.cpp
ToyGame/KitGame/Scenes/: FieldScene.cpp  FieldScene.h  SnowScene.cpp  SnowScene.h  StageScene.cpp  StageScene.h  TitleScene.cpp  TitleScene.h
ToyGame/KitRPG/: FieldScene.cpp  FieldScene.h  KitRPG.cpp  KitRPG.h
ToyGame/RPG/: GameRPG.cpp  GameRPG.h  OutdoorStage.cpp  OutdoorStage.h
ToyGame/RPG/Actors/: BrickActor.cpp  BrickActor.h  HealMagicActor.cpp  HealMagicActor.h  HeroActor.cpp  HeroActor.h  IslandActor.cpp  IslandActor.h  MagicActor.cpp  MagicActor.h  MinionActor.cpp  WolfActor.cpp  WolfActor.h
ToyGame/Settings/: Fire.json  HealMagicParticle.json  HeroActor.json  KitHero.json  MagicParticle.json
ToyGame/TestApp/: TestApp.cpp  TestApp.h
ToyKit/: ToyKit_Modules.md
ToyKit/include/: ToyKit.h
ToyKit/include/Debug/: DebugDraw.h  DebugDrawActor.h  DebugDrawComponent.h  DebugDrawSystem.h
ToyKit/include/Gameplay/: LockOnComponent.h
ToyKit/include/KitCore/: GameFlow.h  IScene.h  LockOnComponent.h  SceneManager.h  Stage.h  WeatherManager.h
ToyKit/include/KitMovement/: CharacterControllerComponent.h  MoveIntent.h  PlayerControllerComponent.h
ToyKit/include/UI/: MessageBoxComponent.h
ToyKit/src/Debug/: DebugDraw.cpp  DebugDrawActor.cpp  DebugDrawComponent.cpp  DebugDrawSystem.cpp
ToyKit/src/Gameplay/: LockOnComponent.cpp
ToyKit/src/KitCore/: Character.cpp  Game.cpp  GameFlow.cpp  IScene.cpp  SceneManager.cpp  Stage.cpp  WeatherManager.cpp
ToyKit/src/KitMovement/: PlayerControllerComponent.cpp
ToyKit/src/UI/: MessageBoxComponent.cpp
ToyLib/Settings/: Application_Settings.json  InputConfig.json  ParticleTeamplate.json  Renderer_Settings.json
ToyLib/Shaders/: Fade.frag  FogFront.frag  Particle.frag  ParticleGPU.frag  ParticleGPU.vert  ParticleUpdate.vert  Phong.frag  PostEffect.frag  PostEffect.vert  RenderSurface.frag  Skinned.vert  Sprite.frag  Unlit.frag  Unlit.vert  WeatherDome.frag  WeatherScreen.frag
ToyLib/Shaders/GL/: BasicMesh.vert  Fade.frag  FogFront.frag  MeshPhong.frag  Particle.frag  Particle.vert  ParticleUpdate.vert  Phong.vert  PostEffect.frag  PostEffect.vert  RainFront.frag  RenderSurface.frag  RenderSurface.vert  ShadowMapping.frag  ShadowMapping_Mesh.vert  ShadowMapping_Skinned.vert  SkinnedMesh.vert  SolidColor.frag  Sprite.frag  Sprite.vert  StaticMesh.vert  Unlit.frag  Unlit.vert  UnlitQuad.frag  UnlitQuad.vert  UnlitWire.frag  UnlitWire.vert  WeatherDome.frag  WeatherDome.vert  WeatherScreen.frag  WeatherScreen.vert
ToyLib/Shaders/VK/: UI_Sprite.frag.spv  UI_Sprite.vert.spv
ToyLib/include/: ToyLib.h
ToyLib/include/Asset/: AssetManager.h
ToyLib/include/Audio/: SoundComponent.h  SoundMixer.h
ToyLib/include/Camera/: CameraAirYController.h  CameraComponent.h  CameraManager.h  FollowCameraComponent.h  OrbitCameraComponent.h
ToyLib/include/Environment/: SkyDomeComponent.h  SkyDomeMeshGenerator.h  SnowFieldComponent.h  WeatherDomeComponent.h  WeatherManager.h  WeatherOverlayComponent.h  WeatherType.h  WeatherTypes.h
ToyLib/include/Graphics/: VisualComponent.h
ToyLib/include/Movement/: DirMoveComponent.h  DirMoveComponent_Legacy.h  FPSMoveComponent.h  FollowMoveComponent.h  InertiaMoveComponent.h  MoveComponent.h  OrbitMoveComponent.h
ToyLib/include/Physics/: BoundingVolumeComponent.h  ColliderComponent.h  ColliderFlags.h  GravityComponent.h  LaserColliderComponent.h  PhysWorld.h  SensorComponent.h
ToyLib/include/Render/: IRenderTarget.h  IRenderer.h  ITextureGPU.h  LightingManager.h  PipelineManager.h  PostEffect.h  RenderBackendState.h  RenderEnums.h  RenderHandles.h  RenderItem.h  RenderItemPayloads.h  RenderPayloadKind.h  RenderQueue.h  RenderTarget.h  Shader.h  VisualLayer.h
ToyLib/include/UI/: MessageBoxActor.h  MessageTextComponent.h
ToyLib/include/Utils/: Frustum.h  MathUtil.h  StringUtil.h
ToyLib/src/Asset/: AssetManager.cpp
ToyLib/src/Audio/: SoundComponent.cpp  SoundMixer.cpp
ToyLib/src/Camera/: CameraAirYController.cpp  CameraComponent.cpp  CameraManager.cpp  FollowCameraComponent.cpp  OrbitCameraComponent.cpp
ToyLib/src/Environment/: SkyDomeComponent.cpp  SkyDomeMeshGenerator.cpp  SnowFieldComponent.cpp  WeatherDomeComponent.cpp  WeatherManager.cpp  WeatherOverlayComponent.cpp
ToyLib/src/Graphics/: VisualComponent.cpp
ToyLib/src/Movement/: DirMoveComponent.cpp  DireMoveComponent_Legacy.cpp  FPSMoveComponent.cpp  FollowMoveComponent.cpp  InertiaMoveComponent.cpp  MoveComponent.cpp  OrbitMoveComponent.cpp
ToyLib/src/Physics/: BoundingVolumeComponent.cpp  ColliderComponent.cpp  GravityComponent.cpp  LaserColliderComponent.cpp  PhysWorld.cpp  PhysWorld_Collision.cpp  PhysWorld_Ground.cpp  PhysWorld_GroundSample.cpp  PhysWorld_MTV.cpp  PhysWorld_Ray.cpp  PhysWorld_Terrain.cpp  PhysWorld_Utility.cpp  SensorComponent.cpp
ToyLib/src/Render/: IRenderer_Core.cpp  IRenderer_DrawPass.cpp  IRenderer_Setting.cpp  IRenderer_Shader.cpp  IRenderer_TextProject.cpp  LightingManager.cpp  RenderItem.cpp  RenderQueue.cpp  RenderTarget.cpp  Shader.cpp
ToyLib/src/UI/: MessageBoxActor.cpp  MessageTextComponent.cpp
ToyLib/src/Utils/: MathUtil.cpp
ToyLibGame.xcodeproj/: project.pbxproj
ToyLibGame.xcodeproj/xcshareddata/xcschemes/: ToyLibGame.xcscheme
doc/cmake_templates/: CMakeLists-vcpkg.txt  CMakeLists.txt
doc/vscode_templates/: c_cpp_properties.json  settings.json  tasks.json
tools/: anim_count.py
(+267 files in other folders)
